# SchoolManagement

./: .gitignore  CMakeLists.txt  README.md  build_installer.ps1  installer.iss
i18n/: ar_AE.ts
qml/: main.qml
qml/components/: AppCard.qml  Avatar.qml  Badge.qml  BulletinConfigPopup.qml  BulletinPreviewPopup.qml  CMakeLists.txt  ContratHistoryPopup.qml  DataTable.qml  DateField.qml  DatePickerPopup.qml  FormField.qml  IconButton.qml  IconLabel.qml  ModalButtons.qml  ModalOverlay.qml  MonthYearSelector.qml  OutlineButton.qml  PageHeader.qml  PaymentPopup.qml  PrimaryButton.qml  ProgressBar_.qml  SearchField.qml  SectionLabel.qml  Separator.qml  SetupWizardModal.qml  SidebarButton.qml  SimpleAreaChart.qml  SimpleBarChart.qml  StaffCard.qml  StaffFormModal.qml  StatCard.qml  Style.qml  TabBar_.qml  WeekPickerPopup.qml  YearClosureModal.qml
qml/components/exams/: CalendarView.qml  EpreuvePickerSection.qml  FormComboWithReset.qml  PlanningView.qml  SessionDetailModal.qml  SessionFormModal.qml  SessionSubmitSection.qml
qml/components/schooling/: ClassModals.qml  ClassStudentsPopup.qml  ClassesSection.qml  LevelSidebar.qml  ManageEquipmentsModal.qml  MatiereDeleteModal.qml  MatiereEditModal.qml  NiveauModals.qml  RoomModals.qml  RoomsSection.qml  SubjectsSection.qml  TypeExamenModal.qml
qml/components/students/: EnrollmentEditModal.qml  StudentDeleteModal.qml  StudentDetailView.qml  StudentEditModal.qml  StudentListFilters.qml  StudentListView.qml  StudentRegistrationModal.qml  StudentTableHeader.qml
qml/pages/: AttendanceModals.qml  AttendancePage.qml  CMakeLists.txt  DashboardPage.qml  ExamsPage.qml  FinanceDonateursTab.qml  FinanceDonationModal.qml  FinanceDonationsTab.qml  FinanceEditModals.qml  FinanceExpenseModal.qml  FinanceExpensesTab.qml  FinanceJournalTab.qml  FinancePage.qml  FinancePaymentModal.qml  FinanceProjectModal.qml  FinanceSchoolingTab.qml  GradesPage.qml  SchoolingPage.qml  SettingsPage.qml  StaffPage.qml  StudentsPage.qml
src/: main.cpp
src/app/: app_controller.cpp  app_controller.h
src/common/: enums.h  result.h
src/controllers/: attendance_controller.cpp  attendance_controller.h  backup_controller.cpp  backup_controller.h  dashboard_controller.cpp  dashboard_controller.h  exams_controller.cpp  exams_controller.h  finance_controller.cpp  finance_controller.h  grades_controller.cpp  grades_controller.h  schooling_controller.cpp  schooling_controller.h  setup_controller.cpp  setup_controller.h  staff_controller.cpp  staff_controller.h  student_controller.cpp  student_controller.h  year_closure_controller.cpp  year_closure_controller.h
src/database/: database_manager.cpp  database_manager.h  database_worker.cpp  database_worker.h
src/models/: eleve.h  finance.h  inscription.h  niveau.h  paiement.h  professeur.h  salle.h  seance.h
src/repositories/: icontrat_repository.h  ieleve_repository.h  ifinance_repository.h  iniveau_repository.h  ipaiement_personnel_repository.h  ipaiement_repository.h  ipersonnel_repository.h  iprof_repository.h  irepository.h  isalle_repository.h  iseance_repository.h  isetup_repository.h  iyear_closure_repository.h
src/repositories/sqlite/: sqlite_contrat_repository.cpp  sqlite_contrat_repository.h  sqlite_eleve_repository.cpp  sqlite_eleve_repository.h  sqlite_equipement_repository.cpp  sqlite_equipement_repository.h  sqlite_finance_repository.cpp  sqlite_finance_repository.h  sqlite_niveau_repository.cpp  sqlite_niveau_repository.h  sqlite_paiement_personnel_repository.cpp  sqlite_paiement_personnel_repository.h  sqlite_paiement_repository.cpp  sqlite_paiement_repository.h  sqlite_personnel_repository.cpp  sqlite_personnel_repository.h  sqlite_prof_repository.cpp  sqlite_prof_repository.h  sqlite_salle_repository.cpp  sqlite_salle_repository.h  sqlite_seance_repository.cpp  sqlite_seance_repository.h  sqlite_setup_repository.cpp  sqlite_setup_repository.h  sqlite_year_closure_repository.cpp  sqlite_year_closure_repository.h
src/services/: attendance_service.cpp  attendance_service.h  dashboard_service.cpp  dashboard_service.h  finance_service.cpp  finance_service.h  grades_service.cpp  grades_service.h  schooling_service.cpp  schooling_service.h  staff_service.cpp  staff_service.h  student_service.cpp  student_service.h
